--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body
 {
-	background-color: snow;
+	background-color: white;
 	color: black;
 	font-family: "Avenir Next", Avenir, "Helvetica Neue", Helvetica, Verdana, sans-serif;
 	font-size: 24px;
@@ -100,7 +100,7 @@ a:link, a:visited, a:active, a:hover
 #update-time
 {
 	color: #542437;
-	font-size: 12px;
+	font-size: 14px;
 	margin-top: -16px;
 	text-align: right;
 }
