--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body
 	background-color: white;
 	color: black;
 	font-family: "Avenir Next", Avenir, "Helvetica Neue", Helvetica, Verdana, sans-serif;
-	font-size: 24px;
+	font-size: 36px;
 	margin: 44px auto 22px auto;
 	max-width: 728px;
 	min-width: 300px;
@@ -30,11 +30,11 @@ ul
 ul li:before
 {
 	content: '\002b\0020';
-	color: #d95b43;
-	font-size: 12px;
-	font-weight: bolder;
-	margin-left: -1em;
-	vertical-align: 38%;
+	color: #c02942;
+	font-size: 24px;
+	font-weight: bold;
+	margin-left: -16px;
+	vertical-align: 6px;
 }
 
 li
@@ -50,9 +50,10 @@ li > a
 
 li p
 {
-	line-height: 34px;
-	margin: 22px 0px 0px 0px;
-	padding-left: 16px;
+	font-size: 24px;
+	line-height: 36px;
+	margin: 12px 0px 0px 0px;
+	padding-left: 12px;
 }
 
 blockquote
