--- a/main.css
+++ b/main.css
@@ -5,9 +5,8 @@ body
 	font-family: "Avenir Next", Avenir, "Helvetica Neue", Helvetica, Verdana, sans-serif;
 	font-size: 36px;
 	margin: 44px auto 22px auto;
-	max-width: 728px;
+	max-width: 648px;
 	min-width: 300px;
-	text-align: center;
 	text-rendering: optimizeLegibility;
 }
 
@@ -15,7 +14,7 @@ h1
 {
 	color: #542437;
 	font-family: Futura, Tahoma, sans-serif;
-	font-size: 88px;
+	font-size: 66px;
 	font-weight: normal;
 	margin: 0px;
 }
@@ -102,8 +101,9 @@ a:link, a:visited, a:active, a:hover
 {
 	color: #542437;
 	font-size: 14px;
-	margin-top: -16px;
-	text-align: right;
+	margin-left: 8px;
+	margin-top: 0px;
+	text-align: left;
 }
 
 @media screen and (max-width: 568px) {
