--- a/main.css
+++ b/main.css
@@ -1,22 +1,22 @@
 body
 {
-	background-color: white;
-	color: black;
-	font-family: "Avenir Next", Avenir, "Helvetica Neue", Helvetica, Verdana, sans-serif;
-	font-size: 36px;
+	background-color: #FEFEFE;
+	color: #2B2B2B;
+	font-family: "Avenir Next", "Avenir", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+	font-size: 33px;
 	margin: 44px auto 22px auto;
-	max-width: 648px;
+	max-width: 600px;
 	min-width: 300px;
 	text-rendering: optimizeLegibility;
 }
 
 h1
 {
-	color: #542437;
-	font-family: Futura, Tahoma, sans-serif;
-	font-size: 66px;
+	color: #4A4A4A;
+	font-family: "Futura", "Tahoma", sans-serif;
+	font-size: 44px;
 	font-weight: normal;
-	margin: 0px;
+	margin: 0px;	
 }
 
 ul
@@ -29,11 +29,11 @@ ul
 ul li:before
 {
 	content: '\002b\0020';
-	color: #c02942;
+	color: #ea4a27;
 	font-size: 24px;
 	font-weight: bold;
 	margin-left: -16px;
-	vertical-align: 6px;
+	vertical-align: 5px;
 }
 
 li
@@ -44,7 +44,7 @@ li
 li > a
 {
 	font-weight: normal;
-	font-family: Futura;
+	font-family: "Futura", "Tahoma", sans-serif;
 }
 
 li p
@@ -70,13 +70,13 @@ blockquote p
 
 a:link, a:visited, a:active, a:hover
 {
-	color: #c02942;
+	color: #ea4a27;
 	text-decoration: underline;
 }
 
 #container
 {
-	max-width: 648px;
+	max-width: 600px;
 	text-align: center;
 	margin: 0px auto 0px auto;
 }
@@ -86,7 +86,7 @@ a:link, a:visited, a:active, a:hover
 	background-color: #fffaf0;
 	border: 2px #dcdcdc solid;
 	font-size: 16px;
-	margin: 24px 0px 24px 0px;
+	margin: 24px 4px 24px 4px;
 	padding: 6px;
 	text-align: justify;
 }
@@ -99,10 +99,10 @@ a:link, a:visited, a:active, a:hover
 
 #update-time
 {
-	color: #542437;
+	color: #4a4a4a;
 	font-size: 14px;
-	margin-left: 8px;
-	margin-top: 0px;
+	margin-left: 4px;
+	margin-top: 4px;
 	text-align: left;
 }
 
